fsdemo-common-tools/kubernetes/skywalking-operator-version/skyworking-deploy-using-local-es/skywalking-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: skywalking-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "skywalking.xdserverk8ssingle.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: skywalking-skywalking-helm-ui
            port:
              number: 80
